css/civicrm.css
/* ... */
#crm-container .data-group-first {
    margin: 10px 5px 5px 5px;
    padding: 5px;
    border-top: 2px solid #999999;
    clear: none;
}

/* Styles for Wizard Progress Bars */
#crm-container ul.wizard-bar {
    border-collapse: collapse;
    padding: 0em 0em 0em 1em;
    white-space: nowrap;
    list-style: none;
    margin: 10px 0px 20px;
    height: auto;
    width: auto;
    line-height: normal;
    border-top: 3px solid #bbb;
}
#crm-container ul.wizard-bar li {
    display: inline;
    background-color: #FAFAFA;
    border: 1px solid #999999;
    height: auto;
    margin-right: 1em;
    padding: .5em 1em .5em;
    text-decoration: none;
    font-size: .95em;
    background-image: none;
}
#crm-container ul.wizard-bar li.current-step {
    background-color: #FAFAFA;
    border-color: #999999;
    font-weight: bold;
}
#crm-container ul.wizard-bar li.past-step {
    background-color: #F5F5F5;
    color: #666;
}

/* Recently Viewed bar */
.block-civicrm div#recently-viewed ul {
    font-size: .9em;
    /* overflow: hidden; */
    margin: 0px;
    padding: 0px;
}

.block-civicrm div#recently-viewed ul li {
    margin: 1px;
    padding: 1px;
    padding-left: 3px;
    border: 1px solid #999999;
    background-color: #fff;
    white-space: nowrap;
}

#crm-container #recently-viewed a {
    font-weight: normal;
    /*color: #6e6e6e;*/
    color: #4A88DF;
    font-size: .95em
}

/* alpha filter styles */


#crm-container #recently-viewed ul, #crm-container #alpha-filter ul {
    border-collapse: collapse;
    padding: 0em;
    list-style-type: none;
    margin: 3px;
    height: auto;
    width: auto;
}

#crm-container div#alpha-filter {
    background-color:#CDE8FE;
    margin:4px 0 5px;
    padding:2px;
    text-align:left;
}

#crm-container #alpha-filter li {
    background-color:transparent;
    background-image:none;
    border:none;
    color:#AAAAAA;
    display:inline;
    font-size:15px;
    font-weight:normal;
    height:auto;
    margin:0 1px;
    padding:2px 5px;
    font-family: Helvetica;
}

#crm-container #alpha-filter a {
    border-bottom:1px dotted #2A71B4;
    color:#2A71B4;
    font-weight:normal;
}





#crm-container div#lang-switch {
    float: right;
    z-index: 2;
    margin: -24px 30px 0px 0px;
}



/*
** Boxes of checkbox elements (e.g. Advanced Search page)
*/
#crm-container .listing-box {
    width: auto;
    max-width: 30em;
    height: 7.25em;
    overflow: auto;
    border: 1px solid #999999;
}

#crm-container .listing-box div {
    color: black;
}

/*
** To allow for taller boxes of groups/tags.
*/
#crm-container .listing-box-tall {
    margin: 0.25em 2.0em 0.5em 0em;
    width: auto;
    max-width: 30em;
    height: 15em;
    overflow: auto;
    border: 1px solid #999999;
}

/* Image Styles */
#crm-container .action-icon {
    vertical-align: middle;
    padding: 2px 2px 2px 3px;
    margin: 2px 2px 3px 2px;
    cursor: pointer;
    cursor: hand;
}

/*
** Style for hiding blocks or table rows
*/
#crm-container .hide-block, #crm-container .hide-row {
    display: none;
}

/*
** Styles for showing blocks and table rows
*/
#crm-container .show-block {
    display: block;
}

#crm-container .show-row {
    display: table-row;
}

#crm-container input.submit-link {
    color: #285286;
    background-color: transparent;
    border: none;
    cursor: pointer;
    cursor: hand;
    margin: 0em -0.5em 0em -0.5em;
}

#crm-container .underline-effect {
    color: #285286;
}

#crm-container .underline-effect:hover {
    text-decoration: underline;
}

#crm-container .underline-effect:before {
    content: "\00BB";
}

#crm-container div#searchForm {
    height: auto;
    width: 100%;
}

#crm-container div#searchForm table.form-layout {
    border-spacing: 0;
}

#crm-container div#searchForm table.form-layout td {
    padding: 4px;
    border: 1px solid #DDDDDD;
}

#crm-container #main {
    height: 95%;
    width: 95%;
    left: 1%;
    top: 1%;
    position: relative;
}

#crm-container .label-pane {
    margin: 0.25em 0em 0em;
    padding: 0.25em;
    background-color: #6AA8EE;
    cursor: pointer;
    color: #213245;
    font-weight: bold;
}

#crm-container .label-pane :hover {
    cursor: pointer;
}

#crm-container .content-pane {
    overflow: auto;
}

/*
editor specific classes
*/
#crm-container dd.editor {
    margin-top: 0.7em;
    margin-left: 0em;
    float: left;
    vertical-align:top;
    width: 58em;
}

#crm-container.clear { /* generic container (i.e. div) for floating buttons */
    overflow: hidden;
    width: 100%;
}

/* class for tinymce buttons display */
#crm-container table.mceLayout td,
#crm-container table.mceLayout table{ 
    padding: 0px;
    background: #EDEDED;
    border: 2px solid #EDEDED;
    font-size: 0em;
    vertical-align: top;
    width: auto;
}

#crm-container tr.mceLast { 
    border: 1px solid #EDEDED;                            
}

#location .form-layout table, 
#location .form-layout td,
#crm-container div#location table.form-layout table.inner-table td{
    border: 0px;
    vertical-align: top;
    margin-bottom: -5px;
    width: auto;
}
/* class for personal campaign info page */

#crm-container table.campaign th, 
table.campaign td, 
#crm-container table.campaign,
#crm-container table.campaign table.form-layout td{ 
    font-size: 9pt;
    border: 0px;
    width: auto;
    vertical-align: top;
}

#crm-container table.campaign table{ 
    background: #F7F7F7;
}

#crm-container div.remaining {
    background : url("../i/contribute/pcp_remain.gif");
}

#crm-container div.achieved {
    background : url("../i/contribute/pcp_achieve.gif");
}

#crm-container .honor_roll {
    margin           : 1em 20px 0 0;
    padding          : 10px;	
    width            : 120px;
    background-color : #fafafa;
    border           : 1px solid #9d9fca;
    height:220px;
}

#crm-container .thermometer-wrapper,
#crm-container .honor-roll-wrapper {
    float:left;
    width:150px;
    margin-left:1em;
}
/* ... */

